# static

./: README.md  main.py  pyproject.toml
docs/: chat.html  forums.html  index.html  post.html
docs/static/: main.css
sass/: _Base.scss  _Blockquote.scss  _Blocks.scss  _Chat.scss  _Code.scss  _Forums.scss  _Main.scss  _Nav.scss  _Palette.scss  _Table.scss  main.scss
static/: chat.js
templates/: chat.html  forums.html  head.html  index.html  nav.html  post.html
